--- a/diapos/Celula.tex
+++ b/diapos/Celula.tex
@@ -1,4 +1,4 @@
-% Created 2015-01-18 dom 18:48
+% Created 2015-01-19 lun 10:11
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -153,7 +153,7 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 \item El \alert{dopaje de semiconductores} consiste en introducir de forma
 controlada impurezas en el cristal.
 
-\item Los átomos de* Fósforo* tienen cinco electrones de valencia (uno más
+\item Los átomos de \alert{Fósforo} tienen cinco electrones de valencia (uno más
 que el silicio).
 
 \item Al impurificar un cristal de Silicio con átomos de Fósforo, el quinto
@@ -287,8 +287,7 @@ menor tensión que la zona n, la unión queda \alert{polarizada en inversa}.
 reforzada} y el paso de portadores de una a otra zona queda aún más
 debilitado.
 
-\item La \alert{corriente *que atraviesa la unión en polarización inversa es de
-*muy bajo valor}.
+\item La \alert{corriente que atraviesa la unión en polarización inversa es de muy bajo valor}.
 \end{itemize}
 \end{frame}
 
@@ -329,20 +328,13 @@ $\mathrm{k}$ es la constante de Boltzmann, $T$ la temperatura del diodo
 
 \begin{frame}[label=sec-2-0-2]{Efecto fotoeléctrico}
 \begin{itemize}
-\item Efecto fotoeléctrico: \alert{los electrones se desplazan a la banda de
-conducción por el aporte energético de fotones}
-($E_{f}=\frac{h\cdot c}{\lambda}$).
+\item Efecto fotoeléctrico: \alert{los electrones se desplazan a la banda de conducción por el aporte energético de fotones} ($E_{f}=\frac{h\cdot c}{\lambda}$).
 
-\item Al \alert{iluminar una unión p-n}, el \alert{campo eléctrico} de la unión conduce
-los portadores y \alert{dificulta la recombinación}.
+\item Al \alert{iluminar una unión p-n}, el \alert{campo eléctrico} de la unión conduce los portadores y \alert{dificulta la recombinación}.
 
-\item La \alert{fotocorriente} es ahora \alert{aprovechable} por un circuito externo
-(\emph{corriente de iluminación, corriente de generación})
+\item La \alert{fotocorriente} es ahora \alert{aprovechable} por un circuito externo (\emph{corriente de iluminación, corriente de generación})
 
-\item La presencia de \alert{tensión en los terminales} de la unión (por ejemplo,
-caída de tensión en una resistencia alimentada por la fotocorriente)*
-favorece la recombinación* (\emph{corriente de oscuridad o corriente de
-diodo}).
+\item La presencia de \alert{tensión en los terminales} de la unión (por ejemplo, caída de tensión en una resistencia alimentada por la fotocorriente) \alert{favorece la recombinación} (\emph{corriente de oscuridad o corriente de diodo}).
 \end{itemize}
 
 $$I=I_{L}-I_{0}\cdot[\exp(\frac{V}{m\cdot V_{T}})-1]$$
